manifests/java-app/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: java-app-svc
  namespace: apps
  labels:
    app: java-app
    app.kubernetes.io/name: java-app
spec:
  type: ClusterIP
  selector:
    app: java-app
  ports:
    - name: http
      protocol: TCP
      port: 8080
      targetPort: 8080
